--- a/app/views/lists/_listSection.html.erb
+++ b/app/views/lists/_listSection.html.erb
@@ -1,1 +1,158 @@
-<div style="background:green;" class="height100"></div>
+<div>
+  <table class="uk-table uk-table-divider">
+    <thead>
+      <tr>
+        <th class="uk-text-nowrap">在庫コード</th>
+        <th class="uk-text-nowrap">物品コード</th>
+        <th class="uk-text-nowrap">物品名</th>
+        <th class="uk-text-nowrap">ステータス</th>
+        <th class="uk-text-nowrap">登録者</th>
+        <th class="uk-text-nowrap">登録日時</th>
+        <th class="uk-text-nowrap">更新者</th>
+        <th class="uk-text-nowrap">更新日時</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td class="uk-text-nowrap">Table Data Table Data</td>
+        <td class="uk-text-nowrap">Table Data Table Data</td>
+        <td class="uk-text-nowrap">Table Data Table Data</td>
+        <td class="uk-text-nowrap">Table Data Table Data</td>
+        <td class="uk-text-nowrap">Table Data Table Data</td>
+        <td class="uk-text-nowrap">Table Data Table Data</td>
+        <td class="uk-text-nowrap">Table Data Table Data</td>
+        <td class="uk-text-nowrap">Table Data Table Data</td>
+      </tr>
+      <tr>
+        <td class="uk-text-nowrap">Table Data Table Data</td>
+        <td class="uk-text-nowrap">Table Data Table Data</td>
+        <td class="uk-text-nowrap">Table Data Table Data</td>
+        <td class="uk-text-nowrap">Table Data Table Data</td>
+        <td class="uk-text-nowrap">Table Data Table Data</td>
+        <td class="uk-text-nowrap">Table Data Table Data</td>
+        <td class="uk-text-nowrap">Table Data Table Data</td>
+        <td class="uk-text-nowrap">Table Data Table Data</td>
+      </tr>
+      <tr>
+        <td class="uk-text-nowrap">Table Data Table Data</td>
+        <td class="uk-text-nowrap">Table Data Table Data</td>
+        <td class="uk-text-nowrap">Table Data Table Data</td>
+        <td class="uk-text-nowrap">Table Data Table Data</td>
+        <td class="uk-text-nowrap">Table Data Table Data</td>
+        <td class="uk-text-nowrap">Table Data Table Data</td>
+        <td class="uk-text-nowrap">Table Data Table Data</td>
+        <td class="uk-text-nowrap">Table Data Table Data</td>
+      </tr>
+      <tr>
+        <td class="uk-text-nowrap">Table Data Table Data</td>
+        <td class="uk-text-nowrap">Table Data Table Data</td>
+        <td class="uk-text-nowrap">Table Data Table Data</td>
+        <td class="uk-text-nowrap">Table Data Table Data</td>
+        <td class="uk-text-nowrap">Table Data Table Data</td>
+        <td class="uk-text-nowrap">Table Data Table Data</td>
+        <td class="uk-text-nowrap">Table Data Table Data</td>
+        <td class="uk-text-nowrap">Table Data Table Data</td>
+      </tr>
+      <tr>
+        <td class="uk-text-nowrap">Table Data Table Data</td>
+        <td class="uk-text-nowrap">Table Data Table Data</td>
+        <td class="uk-text-nowrap">Table Data Table Data</td>
+        <td class="uk-text-nowrap">Table Data Table Data</td>
+        <td class="uk-text-nowrap">Table Data Table Data</td>
+        <td class="uk-text-nowrap">Table Data Table Data</td>
+        <td class="uk-text-nowrap">Table Data Table Data</td>
+        <td class="uk-text-nowrap">Table Data Table Data</td>
+      </tr>
+      <tr>
+        <td class="uk-text-nowrap">Table Data Table Data</td>
+        <td class="uk-text-nowrap">Table Data Table Data</td>
+        <td class="uk-text-nowrap">Table Data Table Data</td>
+        <td class="uk-text-nowrap">Table Data Table Data</td>
+        <td class="uk-text-nowrap">Table Data Table Data</td>
+        <td class="uk-text-nowrap">Table Data Table Data</td>
+        <td class="uk-text-nowrap">Table Data Table Data</td>
+        <td class="uk-text-nowrap">Table Data Table Data</td>
+      </tr>
+      <tr>
+        <td class="uk-text-nowrap">Table Data Table Data</td>
+        <td class="uk-text-nowrap">Table Data Table Data</td>
+        <td class="uk-text-nowrap">Table Data Table Data</td>
+        <td class="uk-text-nowrap">Table Data Table Data</td>
+        <td class="uk-text-nowrap">Table Data Table Data</td>
+        <td class="uk-text-nowrap">Table Data Table Data</td>
+        <td class="uk-text-nowrap">Table Data Table Data</td>
+        <td class="uk-text-nowrap">Table Data Table Data</td>
+      </tr>
+      <tr>
+        <td class="uk-text-nowrap">Table Data Table Data</td>
+        <td class="uk-text-nowrap">Table Data Table Data</td>
+        <td class="uk-text-nowrap">Table Data Table Data</td>
+        <td class="uk-text-nowrap">Table Data Table Data</td>
+        <td class="uk-text-nowrap">Table Data Table Data</td>
+        <td class="uk-text-nowrap">Table Data Table Data</td>
+        <td class="uk-text-nowrap">Table Data Table Data</td>
+        <td class="uk-text-nowrap">Table Data Table Data</td>
+      </tr>
+      <tr>
+        <td class="uk-text-nowrap">Table Data Table Data</td>
+        <td class="uk-text-nowrap">Table Data Table Data</td>
+        <td class="uk-text-nowrap">Table Data Table Data</td>
+        <td class="uk-text-nowrap">Table Data Table Data</td>
+        <td class="uk-text-nowrap">Table Data Table Data</td>
+        <td class="uk-text-nowrap">Table Data Table Data</td>
+        <td class="uk-text-nowrap">Table Data Table Data</td>
+        <td class="uk-text-nowrap">Table Data Table Data</td>
+      </tr>
+      <tr>
+        <td class="uk-text-nowrap">Table Data Table Data</td>
+        <td class="uk-text-nowrap">Table Data Table Data</td>
+        <td class="uk-text-nowrap">Table Data Table Data</td>
+        <td class="uk-text-nowrap">Table Data Table Data</td>
+        <td class="uk-text-nowrap">Table Data Table Data</td>
+        <td class="uk-text-nowrap">Table Data Table Data</td>
+        <td class="uk-text-nowrap">Table Data Table Data</td>
+        <td class="uk-text-nowrap">Table Data Table Data</td>
+      </tr>
+      <tr>
+        <td class="uk-text-nowrap">Table Data Table Data</td>
+        <td class="uk-text-nowrap">Table Data Table Data</td>
+        <td class="uk-text-nowrap">Table Data Table Data</td>
+        <td class="uk-text-nowrap">Table Data Table Data</td>
+        <td class="uk-text-nowrap">Table Data Table Data</td>
+        <td class="uk-text-nowrap">Table Data Table Data</td>
+        <td class="uk-text-nowrap">Table Data Table Data</td>
+        <td class="uk-text-nowrap">Table Data Table Data</td>
+      </tr>
+      <tr>
+        <td class="uk-text-nowrap">Table Data Table Data</td>
+        <td class="uk-text-nowrap">Table Data Table Data</td>
+        <td class="uk-text-nowrap">Table Data Table Data</td>
+        <td class="uk-text-nowrap">Table Data Table Data</td>
+        <td class="uk-text-nowrap">Table Data Table Data</td>
+        <td class="uk-text-nowrap">Table Data Table Data</td>
+        <td class="uk-text-nowrap">Table Data Table Data</td>
+        <td class="uk-text-nowrap">Table Data Table Data</td>
+      </tr>
+      <tr>
+        <td class="uk-text-nowrap">Table Data Table Data</td>
+        <td class="uk-text-nowrap">Table Data Table Data</td>
+        <td class="uk-text-nowrap">Table Data Table Data</td>
+        <td class="uk-text-nowrap">Table Data Table Data</td>
+        <td class="uk-text-nowrap">Table Data Table Data</td>
+        <td class="uk-text-nowrap">Table Data Table Data</td>
+        <td class="uk-text-nowrap">Table Data Table Data</td>
+        <td class="uk-text-nowrap">Table Data Table Data</td>
+      </tr>
+      <tr>
+        <td class="uk-text-nowrap">Table Data Table Data</td>
+        <td class="uk-text-nowrap">Table Data Table Data</td>
+        <td class="uk-text-nowrap">Table Data Table Data</td>
+        <td class="uk-text-nowrap">Table Data Table Data</td>
+        <td class="uk-text-nowrap">Table Data Table Data</td>
+        <td class="uk-text-nowrap">Table Data Table Data</td>
+        <td class="uk-text-nowrap">Table Data Table Data</td>
+        <td class="uk-text-nowrap">Table Data Table Data</td>
+      </tr>
+    </tbody>
+  </table>
+</div>
