--- a/app/assets/stylesheets/lists.css
+++ b/app/assets/stylesheets/lists.css
@@ -1,3 +1,6 @@
+body {
+  background: rgba(245,245,245,1) !important;
+}
 .header-back-color {
   background: linear-gradient(to left,#28a5f5,#1e87f0) !important;
 }
@@ -9,10 +12,10 @@
     min-height: 55px !important;
 }
 .height100 {
-  height:100%;
+  height:100% !important;
 }
 .padding10{
-  padding:10px;
+  padding:10px !important;
 }
 main {
   height:calc(100vh - 75px);
@@ -20,11 +23,23 @@ main {
 #searchSection {
   height:200px;
 }
-#listSection {
+#searchSection > div {
+  background: white !important;
+}
+
+#listSection > div {
+  height: calc(100vh - 380px);
+  overflow: scroll;
+  background: white !important;
+  border: 1px solid rgba(225,225,225,1);
 }
 footer {
   height:55px;
 }
+footer > div {
+  background: white !important;
+}
 aside {
   width:250px;
+  background: rgba(90,215,245,1) !important;
 }
