--- a/app/views/lists/_aside.html.erb
+++ b/app/views/lists/_aside.html.erb
@@ -1,2 +1,77 @@
-<div style="background:rgba(145,24,33,0.5);" class="height100">
+<div class="height100">
+  <span class="close-button uk-button-link" uk-icon="close"></span>
+  <div>
+    <div class="uk-margin-small">
+      <label class="uk-form-label uk-text-muted" for="form-stacked-text">在庫コード</label>
+      <div class="uk-form-controls">
+        <input class="uk-input uk-form-blank" id="form-stacked-text" type="text" value="test" disabled>
+      </div>
+    </div>
+    <div class="uk-margin-small">
+      <label class="uk-form-label uk-text-muted" for="form-stacked-text">物品コード</label>
+      <div class="uk-form-controls">
+        <input class="uk-input uk-form-blank" id="form-stacked-text" type="text" value="test" disabled>
+      </div>
+    </div>
+    <div class="uk-margin-small">
+      <label class="uk-form-label uk-text-muted" for="form-stacked-text">物品名</label>
+      <div class="uk-form-controls">
+        <input class="uk-input uk-form-blank" id="form-stacked-text" type="text" value="test" disabled>
+      </div>
+    </div>
+    <div class="uk-margin-small">
+      <label class="uk-form-label uk-text-muted" for="form-stacked-text">ステータス</label>
+      <div class="uk-form-controls">
+        <input class="uk-input uk-form-blank" id="form-stacked-text" type="text" value="test" disabled>
+      </div>
+    </div>
+    <div class="uk-margin-small">
+      <label class="uk-form-label uk-text-muted" for="form-stacked-text">登録者</label>
+      <div class="uk-form-controls">
+        <input class="uk-input uk-form-blank" id="form-stacked-text" type="text" value="test" disabled>
+      </div>
+    </div>
+    <div class="uk-margin-small">
+      <label class="uk-form-label uk-text-muted" for="form-stacked-text">登録者メールアドレス</label>
+      <div class="uk-form-controls">
+        <input class="uk-input uk-form-blank" id="form-stacked-text" type="text" value="test" disabled>
+      </div>
+    </div>
+    <div class="uk-margin-small">
+      <label class="uk-form-label uk-text-muted" for="form-stacked-text">登録者部署名</label>
+      <div class="uk-form-controls">
+        <input class="uk-input uk-form-blank" id="form-stacked-text" type="text" value="test" disabled>
+      </div>
+    </div>
+    <div class="uk-margin-small">
+      <label class="uk-form-label uk-text-muted" for="form-stacked-text">登録日時</label>
+      <div class="uk-form-controls">
+        <input class="uk-input uk-form-blank" id="form-stacked-text" type="text" value="test" disabled>
+      </div>
+    </div>
+    <div class="uk-margin-small">
+      <label class="uk-form-label uk-text-muted" for="form-stacked-text">更新者</label>
+      <div class="uk-form-controls">
+        <input class="uk-input uk-form-blank" id="form-stacked-text" type="text" value="test" disabled>
+      </div>
+    </div>
+    <div class="uk-margin-small">
+      <label class="uk-form-label uk-text-muted" for="form-stacked-text">更新者メールアドレス</label>
+      <div class="uk-form-controls">
+        <input class="uk-input uk-form-blank" id="form-stacked-text" type="text" value="test" disabled>
+      </div>
+    </div>
+    <div class="uk-margin-small">
+      <label class="uk-form-label uk-text-muted" for="form-stacked-text">更新者部署名</label>
+      <div class="uk-form-controls">
+        <input class="uk-input uk-form-blank" id="form-stacked-text" type="text" value="test" disabled>
+      </div>
+    </div>
+    <div class="uk-margin-small">
+      <label class="uk-form-label uk-text-muted" for="form-stacked-text">更新日時</label>
+      <div class="uk-form-controls">
+        <input class="uk-input uk-form-blank" id="form-stacked-text" type="text" value="test" disabled>
+      </div>
+    </div>
+  </div>
 </div>
