--- a/app/views/lists/_footer.html.erb
+++ b/app/views/lists/_footer.html.erb
@@ -1,1 +1,19 @@
-<div class="height100"></div>
+<div class="height100" uk-grid>
+  <div class="uk-width-expand">
+    <div>
+    </div>
+    <div class="uk-button-group">
+      <button class="uk-button uk-button-default height40 back-white uk-visible@m"><<</button>
+      <button class="uk-button uk-button-default height40 back-white margin-right--1 uk-visible@m"><</button>
+      <select class="uk-select uk-form-width-xsmall height40">
+        <option>1</option>
+        <option>2</option>
+      </select>
+      <button class="uk-button uk-button-default height40 back-white uk-visible@m">></button>
+      <button class="uk-button uk-button-default height40 back-white uk-visible@m">>></button>
+    </div>
+  </div>
+  <div class="uk-width-auto uk-margin-small-top">
+    <p>件数: 550件</p>
+  </div>
+</div>
