--- a/app/views/lists/_header.html.erb
+++ b/app/views/lists/_header.html.erb
@@ -6,7 +6,7 @@
     <div class="uk-navbar-right">
       <ul class="uk-navbar-nav uk-visible@m">
         <li class="uk-active">
-          <%= link_to destroy_user_session_path, method: :get, class: "text-white" do %>ログアウト<% end %>
+          <%= link_to destroy_user_session_path, method: :get, class: "text-white uk-button-text" do %>ログアウト<% end %>
         </li>
       </ul> 
     </div>
