--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -4,17 +4,17 @@
 </header>
 <main uk-grid class="uk-grid-collapse">
   <article class="uk-width-expand uk-flex uk-flex-column">
-    <section id="searchSection" class="uk-flex-2 padding10">
+    <section id="searchSection" class="uk-flex-2 padding10-5">
       <%= render "lists/searchSection" %>
     </section>
-    <section id="listSection" class="uk-flex-1 padding10">
+    <section id="listSection" class="uk-flex-1 padding10-5">
       <%= render "lists/listSection" %>
     </section>
-    <footer class="uk-flex-2 padding10">
+    <footer class="uk-flex-2 padding10-5 uk-padding-remove-bottom">
       <%= render "lists/footer" %>
     </footer>
   </article>
-  <aside class="height100 padding10">
+  <aside class="height100 padding10-5">
     <%= render "lists/aside" %>
   </aside>
 </main>
