--- a/app/assets/stylesheets/lists.css
+++ b/app/assets/stylesheets/lists.css
@@ -8,14 +8,53 @@ body {
 .text-white {
   color: white !important;
 }
+.back-white {
+  background: white !important;
+}
 .uk-navbar-item, .uk-navbar-nav>li>a, .uk-navbar-toggle {
     min-height: 55px !important;
 }
 .height100 {
   height:100% !important;
 }
-.padding10{
-  padding:10px !important;
+.padding10-5{
+  padding:5px 10px !important;
+}
+.padding15-10{
+  padding:10px 15px !important;
+}
+.padding20-10{
+  padding:10px 20px !important;
+}
+.height40 {
+  height:40px;
+}
+.height64 {
+  height:64px;
+}
+.margin100-20 {
+  height: calc(100% - 20px);
+  width: calc(100% - 20px);
+}
+.margin-right--1 {
+  margin-right: -1px !important;
+}
+.search-border {
+  border: 2px solid #1e87f0 !important;
+  border-radius: 20px;
+}
+.search-text {
+  position: absolute;
+  top: 1px;
+  left: 30px;
+  background: white;
+  padding: 0 12px;
+}
+.close-button {
+  position: absolute;
+  top: 56px;
+  right: 21px;
+  cursor: pointer;
 }
 main {
   height:calc(100vh - 75px);
@@ -28,18 +67,29 @@ main {
 }
 
 #listSection > div {
-  height: calc(100vh - 380px);
+  height: calc(100vh - 327px);
   overflow: scroll;
   background: white !important;
   border: 1px solid rgba(225,225,225,1);
 }
-footer {
-  height:55px;
+#listSection th {
+  position: sticky;
+  top: 0;
+  z-index: 2;
+  background: white;
 }
-footer > div {
-  background: white !important;
+footer {
+  height:35px;
+  background: rgba(245,245,245,1) !important;
 }
 aside {
   width:250px;
-  background: rgba(90,215,245,1) !important;
+  background: rgba(40,165,245,0.2);
+  background-blend-mode: normal;
+  overflow-y: scroll;
+}
+aside input {
+  background: 0 0 !important;
+  border-color: transparent !important;
+  color: black !important;
 }
