--- a/app/views/lists/_searchSection.html.erb
+++ b/app/views/lists/_searchSection.html.erb
@@ -1,1 +1,43 @@
-<div class="height100"></div>
+<div class="height100 uk-flex uk-flex-center uk-flex-middle uk-position-relative">
+  <div class="margin100-20 search-border">
+    <div class="uk-column-1-2@s uk-column-1-3@m padding15-10">
+      <div class="uk-margin">
+        <label class="uk-form-label uk-text-muted" for="form-stacked-text">物品コード</label>
+        <div class="uk-form-controls">
+          <input class="uk-input" id="form-stacked-text" type="text" placeholder="">
+        </div>
+      </div>
+      <div class="uk-margin uk-visible@s">
+        <label class="uk-form-label uk-text-muted" for="form-stacked-text">物品名</label>
+        <div class="uk-form-controls">
+          <input class="uk-input" id="form-stacked-text" type="text" placeholder="">
+        </div>
+      </div>
+      <div class="uk-margin uk-visible@s">
+        <label class="uk-form-label uk-text-muted" for="form-stacked-text">ステータス</label>
+        <div class="uk-form-controls">
+          <select class="uk-select" id="form-stacked-select">
+            <option>Option 01</option>
+            <option>Option 01</option>
+          </select>
+        </div>
+      </div>
+      <div class="uk-margin uk-visible@m">
+        <label class="uk-form-label uk-text-muted" for="form-stacked-text">登録者名</label>
+        <div class="uk-form-controls">
+          <input class="uk-input" id="form-stacked-text" type="text" placeholder="">
+        </div>
+      </div>
+      <div class="uk-margin uk-visible@m">
+        <label class="uk-form-label uk-text-muted" for="form-stacked-text">更新者名</label>
+        <div class="uk-form-controls">
+          <input class="uk-input" id="form-stacked-text" type="text" placeholder="">
+        </div>
+      </div>
+      <div class="uk-margin uk-flex uk-flex-right uk-flex-bottom height64">
+        <button class="uk-button uk-button-primary">検索</button>
+      </div>
+    </div>
+  </div>
+  <span class="search-text">検索条件</span>
+</div>
