--- a/app/views/lists/_footer.html.erb
+++ b/app/views/lists/_footer.html.erb
@@ -3,14 +3,14 @@
     <div>
     </div>
     <div class="uk-button-group">
-      <button class="uk-button uk-button-default height40 back-white uk-visible@m"><<</button>
-      <button class="uk-button uk-button-default height40 back-white margin-right--1 uk-visible@m"><</button>
+      <button class="uk-button uk-button-default height40 back-white uk-visible@m padding0-15"><span uk-icon="icon: chevron-double-left"></span></button>
+      <button class="uk-button uk-button-default height40 back-white margin-right--1 uk-visible@m padding0-15"><span uk-icon="icon: chevron-left"></span></button>
       <select class="uk-select uk-form-width-xsmall height40">
         <option>1</option>
         <option>2</option>
       </select>
-      <button class="uk-button uk-button-default height40 back-white uk-visible@m">></button>
-      <button class="uk-button uk-button-default height40 back-white uk-visible@m">>></button>
+      <button class="uk-button uk-button-default height40 back-white uk-visible@m padding0-15"><span uk-icon="icon: chevron-right"></span></button>
+      <button class="uk-button uk-button-default height40 back-white uk-visible@m padding0-15"><span uk-icon="icon: chevron-double-right"></span></button>
     </div>
   </div>
   <div class="uk-width-auto uk-margin-small-top">
