--- a/app/views/lists/_listSection.html.erb
+++ b/app/views/lists/_listSection.html.erb
@@ -2,14 +2,14 @@
   <table class="uk-table uk-table-divider">
     <thead>
       <tr>
-        <th class="uk-text-nowrap">在庫コード</th>
-        <th class="uk-text-nowrap">物品コード</th>
-        <th class="uk-text-nowrap">物品名</th>
-        <th class="uk-text-nowrap">ステータス</th>
-        <th class="uk-text-nowrap">登録者</th>
-        <th class="uk-text-nowrap">登録日時</th>
-        <th class="uk-text-nowrap">更新者</th>
-        <th class="uk-text-nowrap">更新日時</th>
+        <th class="uk-text-nowrap">在庫コード<span uk-icon="icon: none"></span></th>
+        <th class="uk-text-nowrap">物品コード<span uk-icon="icon: none"></span></th>
+        <th class="uk-text-nowrap">物品名<span uk-icon="icon: none"></span></th>
+        <th class="uk-text-nowrap">ステータス<span uk-icon="icon: none"></span></th>
+        <th class="uk-text-nowrap">登録者<span uk-icon="icon: none"></span></th>
+        <th class="uk-text-nowrap">登録日時<span uk-icon="icon: none"></span></th>
+        <th class="uk-text-nowrap">更新者<span uk-icon="icon: none"></span></th>
+        <th class="uk-text-nowrap">更新日時<span uk-icon="icon: none"></span></th>
       </tr>
     </thead>
     <tbody>
