--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -1,8 +1,8 @@
 <%= render "lists/links" %>
-<header class="uk-navbar-container tm-navbar-container uk-sticky-fixed header-back-color">
+<header class="uk-navbar-container tm-navbar-container uk-sticky-fixed header-back-color uk-animation-fade">
     <%= render "lists/header" %>
 </header>
-<main uk-grid class="uk-grid-collapse">
+<main uk-grid class="uk-grid-collapse uk-animation-fade">
   <article class="uk-width-expand uk-flex uk-flex-column">
     <section id="searchSection" class="uk-flex-2 padding10-5">
       <%= render "lists/searchSection" %>
