--- a/app/views/lists/_links.html.erb
+++ b/app/views/lists/_links.html.erb
@@ -2,4 +2,5 @@
 <script src="https://cdn.jsdelivr.net/npm/uikit@3.15.10/dist/js/uikit.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/uikit@3.15.10/dist/js/uikit-icons.min.js"></script>
 
-<link rel="stylesheet" media="all" href="/assets/stylesheets/lists.css" />
+<link rel="stylesheet" media="all" href="/assets/stylesheets/list.css" />
+<script type="text/javascript" src="/assets/javascripts/list.js" defer></script>
