--- a/app/views/lists/_aside.html.erb
+++ b/app/views/lists/_aside.html.erb
@@ -1,5 +1,5 @@
 <div class="height100">
-  <span class="close-button uk-button-link" uk-icon="close"></span>
+  <span id="closeBtn" class="close-button uk-button-link" uk-close></span>
   <div>
     <div class="uk-margin-small">
       <label class="uk-form-label uk-text-muted" for="form-stacked-text">在庫コード</label>
