--- a/app/views/lists/_listSection.html.erb
+++ b/app/views/lists/_listSection.html.erb
@@ -1,19 +1,19 @@
-<div>
+<div class="uk-card uk-card-default uk-box-shadow-large uk-border-rounded">
   <table class="uk-table uk-table-divider">
     <thead>
       <tr>
-        <th class="uk-text-nowrap">在庫コード<span uk-icon="icon: none"></span></th>
-        <th class="uk-text-nowrap">物品コード<span uk-icon="icon: none"></span></th>
-        <th class="uk-text-nowrap">物品名<span uk-icon="icon: none"></span></th>
-        <th class="uk-text-nowrap">ステータス<span uk-icon="icon: none"></span></th>
-        <th class="uk-text-nowrap">登録者<span uk-icon="icon: none"></span></th>
-        <th class="uk-text-nowrap">登録日時<span uk-icon="icon: none"></span></th>
-        <th class="uk-text-nowrap">更新者<span uk-icon="icon: none"></span></th>
-        <th class="uk-text-nowrap">更新日時<span uk-icon="icon: none"></span></th>
+        <th id="zaikoCodeHeader" class="uk-text-nowrap">在庫コード<span uk-icon="icon: none"></span></th>
+        <th id="itemCodeHeader" class="uk-text-nowrap">物品コード<span uk-icon="icon: none"></span></th>
+        <th id="itemNameHeader" class="uk-text-nowrap">物品名<span uk-icon="icon: none"></span></th>
+        <th id="statusHeader" class="uk-text-nowrap">ステータス<span uk-icon="icon: none"></span></th>
+        <th id="registUserHeader" class="uk-text-nowrap">登録者<span uk-icon="icon: none"></span></th>
+        <th id="registDateHeader" class="uk-text-nowrap">登録日時<span uk-icon="icon: none"></span></th>
+        <th id="updateUserHeader" class="uk-text-nowrap">更新者<span uk-icon="icon: none"></span></th>
+        <th id="updateDateHeader" class="uk-text-nowrap">更新日時<span uk-icon="icon: none"></span></th>
       </tr>
     </thead>
     <tbody>
-      <tr>
+      <tr class="listLine">
         <td class="uk-text-nowrap">Table Data Table Data</td>
         <td class="uk-text-nowrap">Table Data Table Data</td>
         <td class="uk-text-nowrap">Table Data Table Data</td>
@@ -23,7 +23,7 @@
         <td class="uk-text-nowrap">Table Data Table Data</td>
         <td class="uk-text-nowrap">Table Data Table Data</td>
       </tr>
-      <tr>
+      <tr class="listLine">
         <td class="uk-text-nowrap">Table Data Table Data</td>
         <td class="uk-text-nowrap">Table Data Table Data</td>
         <td class="uk-text-nowrap">Table Data Table Data</td>
@@ -33,7 +33,7 @@
         <td class="uk-text-nowrap">Table Data Table Data</td>
         <td class="uk-text-nowrap">Table Data Table Data</td>
       </tr>
-      <tr>
+      <tr class="listLine">
         <td class="uk-text-nowrap">Table Data Table Data</td>
         <td class="uk-text-nowrap">Table Data Table Data</td>
         <td class="uk-text-nowrap">Table Data Table Data</td>
@@ -43,7 +43,7 @@
         <td class="uk-text-nowrap">Table Data Table Data</td>
         <td class="uk-text-nowrap">Table Data Table Data</td>
       </tr>
-      <tr>
+      <tr class="listLine">
         <td class="uk-text-nowrap">Table Data Table Data</td>
         <td class="uk-text-nowrap">Table Data Table Data</td>
         <td class="uk-text-nowrap">Table Data Table Data</td>
@@ -53,7 +53,7 @@
         <td class="uk-text-nowrap">Table Data Table Data</td>
         <td class="uk-text-nowrap">Table Data Table Data</td>
       </tr>
-      <tr>
+      <tr class="listLine">
         <td class="uk-text-nowrap">Table Data Table Data</td>
         <td class="uk-text-nowrap">Table Data Table Data</td>
         <td class="uk-text-nowrap">Table Data Table Data</td>
@@ -63,7 +63,7 @@
         <td class="uk-text-nowrap">Table Data Table Data</td>
         <td class="uk-text-nowrap">Table Data Table Data</td>
       </tr>
-      <tr>
+      <tr class="listLine">
         <td class="uk-text-nowrap">Table Data Table Data</td>
         <td class="uk-text-nowrap">Table Data Table Data</td>
         <td class="uk-text-nowrap">Table Data Table Data</td>
@@ -73,7 +73,7 @@
         <td class="uk-text-nowrap">Table Data Table Data</td>
         <td class="uk-text-nowrap">Table Data Table Data</td>
       </tr>
-      <tr>
+      <tr class="listLine">
         <td class="uk-text-nowrap">Table Data Table Data</td>
         <td class="uk-text-nowrap">Table Data Table Data</td>
         <td class="uk-text-nowrap">Table Data Table Data</td>
@@ -83,7 +83,7 @@
         <td class="uk-text-nowrap">Table Data Table Data</td>
         <td class="uk-text-nowrap">Table Data Table Data</td>
       </tr>
-      <tr>
+      <tr class="listLine">
         <td class="uk-text-nowrap">Table Data Table Data</td>
         <td class="uk-text-nowrap">Table Data Table Data</td>
         <td class="uk-text-nowrap">Table Data Table Data</td>
@@ -93,7 +93,7 @@
         <td class="uk-text-nowrap">Table Data Table Data</td>
         <td class="uk-text-nowrap">Table Data Table Data</td>
       </tr>
-      <tr>
+      <tr class="listLine">
         <td class="uk-text-nowrap">Table Data Table Data</td>
         <td class="uk-text-nowrap">Table Data Table Data</td>
         <td class="uk-text-nowrap">Table Data Table Data</td>
@@ -103,7 +103,7 @@
         <td class="uk-text-nowrap">Table Data Table Data</td>
         <td class="uk-text-nowrap">Table Data Table Data</td>
       </tr>
-      <tr>
+      <tr class="listLine">
         <td class="uk-text-nowrap">Table Data Table Data</td>
         <td class="uk-text-nowrap">Table Data Table Data</td>
         <td class="uk-text-nowrap">Table Data Table Data</td>
@@ -113,7 +113,7 @@
         <td class="uk-text-nowrap">Table Data Table Data</td>
         <td class="uk-text-nowrap">Table Data Table Data</td>
       </tr>
-      <tr>
+      <tr class="listLine">
         <td class="uk-text-nowrap">Table Data Table Data</td>
         <td class="uk-text-nowrap">Table Data Table Data</td>
         <td class="uk-text-nowrap">Table Data Table Data</td>
@@ -123,7 +123,7 @@
         <td class="uk-text-nowrap">Table Data Table Data</td>
         <td class="uk-text-nowrap">Table Data Table Data</td>
       </tr>
-      <tr>
+      <tr class="listLine">
         <td class="uk-text-nowrap">Table Data Table Data</td>
         <td class="uk-text-nowrap">Table Data Table Data</td>
         <td class="uk-text-nowrap">Table Data Table Data</td>
@@ -133,7 +133,7 @@
         <td class="uk-text-nowrap">Table Data Table Data</td>
         <td class="uk-text-nowrap">Table Data Table Data</td>
       </tr>
-      <tr>
+      <tr class="listLine">
         <td class="uk-text-nowrap">Table Data Table Data</td>
         <td class="uk-text-nowrap">Table Data Table Data</td>
         <td class="uk-text-nowrap">Table Data Table Data</td>
@@ -143,7 +143,7 @@
         <td class="uk-text-nowrap">Table Data Table Data</td>
         <td class="uk-text-nowrap">Table Data Table Data</td>
       </tr>
-      <tr>
+      <tr class="listLine">
         <td class="uk-text-nowrap">Table Data Table Data</td>
         <td class="uk-text-nowrap">Table Data Table Data</td>
         <td class="uk-text-nowrap">Table Data Table Data</td>
