--- a/app/views/lists/_footer.html.erb
+++ b/app/views/lists/_footer.html.erb
@@ -5,7 +5,7 @@
     <div class="uk-button-group uk-card uk-card-default uk-box-shadow-large">
       <button id="firstPageBtn" class="uk-button uk-button-default height40 back-white uk-visible@m padding0-15"><span uk-icon="icon: chevron-double-left"></span></button>
       <button id="beforePageBtn" class="uk-button uk-button-default height40 back-white margin-right--1 uk-visible@m padding0-15"><span uk-icon="icon: chevron-left"></span></button>
-      <select class="uk-select uk-form-width-xsmall height40">
+      <select id="pageSelect" class="uk-select uk-form-width-xsmall height40">
         <option>1</option>
         <option>2</option>
       </select>
@@ -14,6 +14,6 @@
     </div>
   </div>
   <div class="uk-width-auto uk-margin-small-top">
-    <p>件数: 550件</p>
+    <p>件数: <span id="lineNum"></span>件</p>
   </div>
 </div>
