--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -14,7 +14,7 @@
       <%= render "lists/footer" %>
     </footer>
   </article>
-  <aside class="height100 padding10-5">
+  <aside class="height100 padding10-5" style="display:none;">
     <%= render "lists/aside" %>
   </aside>
 </main>
