--- a/app/views/lists/_searchSection.html.erb
+++ b/app/views/lists/_searchSection.html.erb
@@ -35,7 +35,7 @@
         </div>
       </div>
       <div class="uk-margin uk-flex uk-flex-right uk-flex-bottom height64">
-        <button id="searchBtn" class="uk-button uk-button-primary">検索</button>
+        <button id="searchBtn" class="uk-button uk-button-primary uk-border-rounded">検索</button>
       </div>
     </div>
   </div>
