--- a/app/views/lists/_footer.html.erb
+++ b/app/views/lists/_footer.html.erb
@@ -14,6 +14,6 @@
     </div>
   </div>
   <div class="uk-width-auto uk-margin-small-top">
-    <p>件数: <span id="lineNum"></span>件</p>
+    <p>件数: <span id="totalCount"></span>件</p>
   </div>
 </div>
