--- a/app/views/lists/_searchSection.html.erb
+++ b/app/views/lists/_searchSection.html.erb
@@ -4,34 +4,34 @@
       <div class="uk-margin">
         <label class="uk-form-label uk-text-muted" for="form-stacked-text">物品コード</label>
         <div class="uk-form-controls">
-          <input class="uk-input" id="form-stacked-text" type="text" placeholder="">
-        </div>
-      </div>
-      <div class="uk-margin uk-visible@s">
-        <label class="uk-form-label uk-text-muted" for="form-stacked-text">物品名</label>
-        <div class="uk-form-controls">
-          <input class="uk-input" id="form-stacked-text" type="text" placeholder="">
-        </div>
-      </div>
-      <div class="uk-margin uk-visible@s">
-        <label class="uk-form-label uk-text-muted" for="form-stacked-text">ステータス</label>
-        <div class="uk-form-controls">
-          <select class="uk-select" id="form-stacked-select">
-            <option>Option 01</option>
-            <option>Option 01</option>
-          </select>
+          <input class="uk-input" id="itemCodeInput" type="text" placeholder="">
         </div>
       </div>
       <div class="uk-margin uk-visible@m">
         <label class="uk-form-label uk-text-muted" for="form-stacked-text">登録者名</label>
         <div class="uk-form-controls">
-          <input class="uk-input" id="form-stacked-text" type="text" placeholder="">
+          <input class="uk-input" id="registUserInput" type="text" placeholder="">
+        </div>
+      </div>
+      <div class="uk-margin uk-visible@s">
+        <label class="uk-form-label uk-text-muted" for="form-stacked-text">物品名</label>
+        <div class="uk-form-controls">
+          <input class="uk-input" id="itemNameInput" type="text" placeholder="">
         </div>
       </div>
       <div class="uk-margin uk-visible@m">
         <label class="uk-form-label uk-text-muted" for="form-stacked-text">更新者名</label>
         <div class="uk-form-controls">
-          <input class="uk-input" id="form-stacked-text" type="text" placeholder="">
+          <input class="uk-input" id="updateUserInput" type="text" placeholder="">
+        </div>
+      </div>
+      <div class="uk-margin uk-visible@s">
+        <label class="uk-form-label uk-text-muted" for="form-stacked-text">ステータス</label>
+        <div class="uk-form-controls">
+          <select class="uk-select" id="statusSelect">
+            <option>Option 01</option>
+            <option>Option 01</option>
+          </select>
         </div>
       </div>
       <div class="uk-margin uk-flex uk-flex-right uk-flex-bottom height64">
