--- a/app/assets/stylesheets/list.css
+++ b/app/assets/stylesheets/list.css
@@ -62,6 +62,9 @@ body {
 main {
   height:calc(100vh - 75px);
 }
+header img {
+  height: 50px;
+}
 .aside-hover:hover {
   background: rgba(40,165,245,0.1);
 }
