--- a/app/views/lists/_header.html.erb
+++ b/app/views/lists/_header.html.erb
@@ -1,7 +1,9 @@
 <div class="uk-container uk-container-expand">
   <nav class="uk-navbar">
     <div class="uk-navbar-left">
-      <a href="./" class="uk-navbar-item uk-logo text-white">General List</a>
+      <a href="./" class="uk-navbar-item uk-logo text-white">
+        <%= image_tag 'logo.png' %>
+      </a>
     </div>
     <div class="uk-navbar-right">
       <ul class="uk-navbar-nav uk-visible@m">
