--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -17,4 +17,7 @@
   <aside class="height100 padding10-5" style="display:none;">
     <%= render "lists/aside" %>
   </aside>
+  <section id="loading">
+    <div uk-spinner></div>
+  </section>
 </main>
