--- a/app/assets/stylesheets/list.css
+++ b/app/assets/stylesheets/list.css
@@ -118,3 +118,15 @@ aside input {
   border-color: transparent !important;
   color: black !important;
 }
+#loading {
+  height: calc(100vh - 75px);
+  width: 100%;
+  position: absolute;
+  display: none;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: rgba(100,100,100,.4);
+  z-index: 2;
+  color: white;
+}
