--- a/app/views/lists/_listSection.html.erb
+++ b/app/views/lists/_listSection.html.erb
@@ -1,8 +1,8 @@
 <div class="uk-card uk-card-default uk-box-shadow-large uk-border-rounded">
   <table class="uk-table uk-table-divider">
     <thead>
-      <tr>
-        <th id="zaikoCodeHeader" class="uk-text-nowrap listHeader" data-row="zaikoCode">在庫コード<span uk-icon="icon: none"></span></th>
+      <tr class="uk-box-shadow-small">
+        <th id="zaikoCodeHeader" class="uk-text-nowrap listHeader" data-row="zaikoCode">在庫コード<span uk-icon="icon: triangle-up"></span></th>
         <th id="itemCodeHeader" class="uk-text-nowrap listHeader" data-row="itemCode">物品コード<span uk-icon="icon: none"></span></th>
         <th id="itemNameHeader" class="uk-text-nowrap listHeader" data-row="itemName">物品名<span uk-icon="icon: none"></span></th>
         <th id="statusHeader" class="uk-text-nowrap listHeader" data-row="status">ステータス<span uk-icon="icon: none"></span></th>
