--- a/app/views/lists/_footer.html.erb
+++ b/app/views/lists/_footer.html.erb
@@ -2,15 +2,13 @@
   <div class="uk-width-expand">
     <div>
     </div>
-    <div class="uk-button-group uk-card uk-card-default uk-box-shadow-large">
-      <button id="firstPageBtn" class="uk-button uk-button-default height40 back-white uk-visible@m padding0-15"><span uk-icon="icon: chevron-double-left"></span></button>
-      <button id="beforePageBtn" class="uk-button uk-button-default height40 back-white margin-right--1 uk-visible@m padding0-15"><span uk-icon="icon: chevron-left"></span></button>
-      <select id="pageSelect" class="uk-select uk-form-width-xsmall height40">
-        <option>1</option>
-        <option>2</option>
+    <div class="uk-button-group uk-card uk-card-default uk-box-shadow-small">
+      <button id="firstPageBtn" class="uk-button uk-button-default height40 back-white uk-visible@m padding0-15 "><span uk-icon="icon: chevron-double-left"></span></button>
+      <button id="beforePageBtn" class="uk-button uk-button-default height40 back-white margin-right--1 uk-visible@m padding0-15 "><span uk-icon="icon: chevron-left"></span></button>
+      <select id="pageSelect" class="uk-select uk-form-width-xsmall height40 ">
       </select>
-      <button id="afterPageBtn" class="uk-button uk-button-default height40 back-white uk-visible@m padding0-15"><span uk-icon="icon: chevron-right"></span></button>
-      <button id="lastPageBtn" class="uk-button uk-button-default height40 back-white uk-visible@m padding0-15"><span uk-icon="icon: chevron-double-right"></span></button>
+      <button id="afterPageBtn" class="uk-button uk-button-default height40 back-white uk-visible@m padding0-15 "><span uk-icon="icon: chevron-right"></span></button>
+      <button id="lastPageBtn" class="uk-button uk-button-default height40 back-white uk-visible@m padding0-15 "><span uk-icon="icon: chevron-double-right"></span></button>
     </div>
   </div>
   <div class="uk-width-auto uk-margin-small-top">
