--- a/app/views/lists/_listSection.html.erb
+++ b/app/views/lists/_listSection.html.erb
@@ -1,4 +1,4 @@
-<div class="uk-card uk-card-default uk-box-shadow-large uk-border-rounded">
+<div class="uk-card uk-card-default uk-box-shadow-small uk-border-rounded">
   <table class="uk-table uk-table-divider">
     <thead>
       <tr class="uk-box-shadow-small">
@@ -8,7 +8,7 @@
         <th id="statusHeader" class="uk-text-nowrap listHeader" data-row="status">ステータス<span uk-icon="icon: none"></span></th>
         <th id="registUserHeader" class="uk-text-nowrap listHeader" data-row="registUser">登録者<span uk-icon="icon: none"></span></th>
         <th id="registDateHeader" class="uk-text-nowrap listHeader" data-row="registDate">登録日時<span uk-icon="icon: none"></span></th>
-        <th id="updateUserHeader" class="uk-text-nowrap listHeader" data-row="updateName">更新者<span uk-icon="icon: none"></span></th>
+        <th id="updateUserHeader" class="uk-text-nowrap listHeader" data-row="updateUser">更新者<span uk-icon="icon: none"></span></th>
         <th id="updateDateHeader" class="uk-text-nowrap listHeader" data-row="updateDate">更新日時<span uk-icon="icon: none"></span></th>
       </tr>
     </thead>
