--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -1,5 +1,5 @@
 <%= render "lists/links" %>
-<header class="uk-navbar-container tm-navbar-container uk-sticky-fixed header-back-color uk-animation-fade uk-box-shadow-large">
+<header class="uk-navbar-container tm-navbar-container uk-sticky-fixed header-back-color uk-animation-fade uk-box-shadow-small">
     <%= render "lists/header" %>
 </header>
 <main uk-grid class="uk-grid-collapse uk-animation-fade">
