--- a/app/views/lists/_searchSection.html.erb
+++ b/app/views/lists/_searchSection.html.erb
@@ -1,4 +1,4 @@
-<div class="height100 uk-flex uk-flex-center uk-flex-middle uk-position-relative uk-card uk-card-default uk-box-shadow-large uk-border-rounded">
+<div class="height100 uk-flex uk-flex-center uk-flex-middle uk-position-relative uk-card uk-card-default uk-box-shadow-small uk-border-rounded">
   <div class="margin100-20 search-border">
     <div class="uk-column-1-2@s uk-column-1-3@m padding15-10">
       <div class="uk-margin">
