--- a/app/views/lists/_searchSection.html.erb
+++ b/app/views/lists/_searchSection.html.erb
@@ -4,38 +4,42 @@
       <div class="uk-margin">
         <label class="uk-form-label uk-text-muted" for="form-stacked-text">物品コード</label>
         <div class="uk-form-controls">
-          <input class="uk-input" id="itemCodeInput" type="text" placeholder="">
+          <input class="uk-input" id="itemCodeInput" type="text" placeholder="" tabindex="1">
         </div>
       </div>
       <div class="uk-margin uk-visible@m">
         <label class="uk-form-label uk-text-muted" for="form-stacked-text">登録者名</label>
         <div class="uk-form-controls">
-          <input class="uk-input" id="registUserInput" type="text" placeholder="">
+          <input class="uk-input" id="registUserInput" type="text" placeholder="" tabindex="4">
         </div>
       </div>
       <div class="uk-margin uk-visible@s">
         <label class="uk-form-label uk-text-muted" for="form-stacked-text">物品名</label>
         <div class="uk-form-controls">
-          <input class="uk-input" id="itemNameInput" type="text" placeholder="">
+          <input class="uk-input" id="itemNameInput" type="text" placeholder="" tabindex="2">
         </div>
       </div>
       <div class="uk-margin uk-visible@m">
         <label class="uk-form-label uk-text-muted" for="form-stacked-text">更新者名</label>
         <div class="uk-form-controls">
-          <input class="uk-input" id="updateUserInput" type="text" placeholder="">
+          <input class="uk-input" id="updateUserInput" type="text" placeholder="" tabindex="5">
         </div>
       </div>
       <div class="uk-margin uk-visible@s">
         <label class="uk-form-label uk-text-muted" for="form-stacked-text">ステータス</label>
         <div class="uk-form-controls">
-          <select class="uk-select" id="statusSelect">
-            <option>Option 01</option>
-            <option>Option 01</option>
+          <select class="uk-select" id="statusSelect" tabindex="3">
+            <option></option>
+            <option>入荷</option>
+            <option>棚卸</option>
+            <option>返却</option>
+            <option>処分</option>
+            <option>不明</option>
           </select>
         </div>
       </div>
       <div class="uk-margin uk-flex uk-flex-right uk-flex-bottom height64">
-        <button id="searchBtn" class="uk-button uk-button-primary uk-border-rounded">検索</button>
+        <button id="searchBtn" class="uk-button uk-button-primary uk-border-rounded" tabindex="6">検索</button>
       </div>
     </div>
   </div>
